get sex list from db
